--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+    <meta name="description" content="Create your amazing website">
     <link rel="icon" href="16x16.png" type="image/x-icon" />
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
