--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Create your amazing website">
     <link rel="icon" href="16x16.png" type="image/x-icon" />
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<div class="header">
 		<ul>
 			<li class="menu underline-magical">ABOUT</li>
-			<li class="menu underline-magical">WHAT WE DO</li>
+			<li class="menu underline-magical">CONTACT</li>
 		</ul>
 	</div>
 
