--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>5XSTUDIO</title>
-	<link href="https://fonts.googleapis.com/css?family=Anaheim|Roboto+Slab" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Anaheim|Roboto+Slab|Lato" rel="stylesheet">
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
