--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>5XSTUDIO</title>
-	<link href="https://fonts.googleapis.com/css?family=Anaheim|Roboto+Slab|Lato" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Anaheim|Roboto+Slab|Lato|Rubik" rel="stylesheet">
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,34 +11,62 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+	<!-- Loading animation -->
+	<div class="preloader">
+		<div class="preloader-animation">
+			<div class="dot1"></div>
+			<div class="dot2"></div>
+		</div>
+	</div>
+	<!-- /Loading animation -->
+
+  	<!-- menu -->
 	<div class="header">
-		<ul>
+		<ul class="menu-wrap">
 			<li class="menu underline-magical">ABOUT</li>
 			<li class="menu underline-magical">CONTACT</li>
 		</ul>
 	</div>
+	<!-- /end menu -->
 
-	<p class="text"> <span class="text__first"><span class="text__word">5XST </span><span class="text__first-bg"></span></span><br/><span class="text__second"><span class="text__word">UDIO</span><span class="text__second-bg"></span></span></p>
-
+	<!-- text -->
+	<p class="text"> 
+		<span class="text__first">
+			<span class="text__word">5XST </span>
+			<span class="text__first-bg"></span>
+		</span>
+		<br/>
+		<span class="text__second">
+			<span class="text__word">UDIO</span>
+			<span class="text__second-bg"></span>
+		</span>
+	</p>
+	<!-- /end text -->
+	
+	<!-- footer -->
 	<div class="footer">&copy; 5XSTUDIO 2019</div>
+	<!-- /end footer -->
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>	
 	<script>
 	// envelope animation
 	window.onload = function(){
-	  var tl = new TimelineLite({delay: 1}),
-	    firstBg = document.querySelectorAll('.text__first-bg'),
-	    secBg = document.querySelectorAll('.text__second-bg'),
-	    word  = document.querySelectorAll('.text__word');
-	  
-	  tl
-	    .to(firstBg, 0.2, {scaleX:1})
-	    .to(secBg, 0.2, {scaleX:1})
-	    .to(word, 0.1, {opacity:1}, "-=0.1")  
-	    .to(firstBg, 0.2, {scaleX:0})
-	    .to(secBg, 0.2, {scaleX:0});
-	  
-	  // document.querySelector('.restart').onclick = function() {tl.restart();};
+		$(".preloader").fadeOut("slow");
+
+		var tl = new TimelineLite({delay: 1.5}),
+		    firstBg = document.querySelectorAll('.text__first-bg'),
+		    secBg = document.querySelectorAll('.text__second-bg'),
+		    word  = document.querySelectorAll('.text__word');
+		  
+		tl
+		    .to(firstBg, 0.2, {scaleX:1})
+		    .to(secBg, 0.2, {scaleX:1})
+		    .to(word, 0.1, {opacity:1}, "-=0.1")  
+		    .to(firstBg, 0.2, {scaleX:0})
+		    .to(secBg, 0.2, {scaleX:0});
+		  
+		// document.querySelector('.restart').onclick = function() {tl.restart();};
 	};
 
 	
