--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   	<!-- menu -->
 	<div class="header">
 		<ul class="menu-wrap">
-			<li class="menu underline-magical">ABOUT</li>
-			<li class="menu underline-magical">CONTACT</li>
+			<a class="menu-link" href=""><li class="menu underline-magical">ABOUT</li></a>
+			<a class="menu-link" href=""><li class="menu underline-magical">CONTACT</li></a>
 		</ul>
 	</div>
 	<!-- /end menu -->
