--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>5XSTUDIO</title>
-	<link href="https://fonts.googleapis.com/css?family=Anaheim|Roboto+Slab|Lato|Rubik" rel="stylesheet">
 	<meta charset="utf-8">
+	<title>5XSTUDIO</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Create your amazing website">
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Lato|Rubik" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="hamburgers.css">
     <link rel="icon" href="16x16.png" type="image/x-icon" />
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -23,8 +24,16 @@
   	<!-- menu -->
 	<div class="header">
 		<ul class="menu-wrap">
+			<a class="menu-link" href=""><li class="menu home-button">HOME</li></a>
 			<a class="menu-link" href=""><li class="menu underline-magical">ABOUT</li></a>
 			<a class="menu-link" href=""><li class="menu underline-magical">CONTACT</li></a>
+			<a class="menu-link" href=""><li class="menu ham-button">
+				<button class="hamburger" type="button">
+				<span class="hamburger-box">
+				    <span class="hamburger-inner"></span>
+				</span>
+				</button>
+			</li></a>
 		</ul>
 	</div>
 	<!-- /end menu -->
